# EX-APPAgent

./: .gitignore  CLAUDE.md  README.md  README_CN.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/commands/: appagent.md
agents/: code-operator.md  competitor-researcher.md
docs/superpowers/plans/: 2026-04-12-phase1-skill-foundation.md
docs/superpowers/specs/: 2026-04-12-appagent-design.md
engine/: README.md  pyproject.toml
engine/src/appagent_engine/: __init__.py  cli.py  config.py  guardrails.py  health.py  net.py  scheduler.py
engine/src/appagent_engine/analyzer/: budget.py  experiment.py  milestone.py  trends.py
engine/src/appagent_engine/collectors/: appstore.py  aso.py  assembler.py  competitor.py  googleplay.py  reviews.py
engine/src/appagent_engine/extensions/: README.md  loader.py  review_sentiment.py
engine/src/appagent_engine/store/: experience.py  writer.py
modules/: action-lifecycle.md  cold-start.md
plugins/ex-appagent/.claude-plugin/: plugin.json
plugins/ex-appagent/.codex-plugin/: plugin.json
plugins/ex-appagent/agents/: analyst.md
plugins/ex-appagent/commands/: appagent.md
plugins/ex-appagent/modules/: capability-expansion.md  cold-start.md  harness-loop.md  priority-engine.md  state-manager.md
plugins/ex-appagent/skills/appagent/: SKILL.md
plugins/ex-appagent/templates/: AGENTS.md  health-initial.json
tasks/: task-plan.md  task-plan.yaml
tasks/phase2-python-engine/: tasks.md  tasks.yaml
tasks/phase3-self-improvement/: tasks.md  tasks.yaml
tasks/phase4-stabilization/: tasks.md  tasks.yaml
templates/: program-template.md  state-initial.json
