[project]
name = "appagent-engine"
version = "0.1.0"
description = "Python data engine for EX-APPAgent — automated app metrics collection, trend analysis, and experiment pre-calculation"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "MonkCoding"}]
readme = "README.md"
keywords = ["app", "analytics", "aso", "appstore", "googleplay", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx[socks]>=0.27",
    "PyJWT[crypto]>=2.8",
    "click>=8.1",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-httplib2>=0.1",
    "PySocks>=1.7",
]

[project.urls]
Homepage = "https://github.com/Shameless521/EX-APPAgent"
Repository = "https://github.com/Shameless521/EX-APPAgent"

[project.scripts]
appagent = "appagent_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
